--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,15 @@ spring:
     show-sql: true
   application:
     name: AUTH-SERVICE
+
+    config:
+      import: configserver:http://localhost:9296
 #  config:
 #    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
 
-eureka:
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+#eureka:
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
