--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,12 +15,12 @@ spring:
   application:
     name: AUTH-SERVICE
 
-    config:
-      import: configserver:http://localhost:9296
-    profiles:
-      active: test
-#  config:
-#    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+
+
+  config:
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+  profiles:
+    active: test
 
 #eureka:
 #  client:
