--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 
 
   config:
-    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
+    import: configserver:${CONFIG_SERVER_URL:http://3.108.41.230:9296}
   profiles:
     active: test
 
