--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 doctor.topic.name=doctor-details-data-topic
 user.topic.name=user-details-data-topic
 
-# email properties
+# email propertie
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=suhanmuhammed8@gmail.com
