--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.producer.bootstrap-servers=http://3.108.41.230:9092
+spring.kafka.producer.bootstrap-servers=3.108.41.230:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 doctor.topic.name=doctor-details-data-topic
