--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://ls-dadd6ea104784a8dd6f671234507d639f605d304.cz3el1yeom5t.ap-south-1.rds.amazonaws.com:3306/mediconnectauth
-    username: dbmasteruser
-    password: mediconnect98
+    url: jdbc:mysql://localhost:3306/mediconnectauth
+    username: root
+    password: sh98@sh98
+    driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://ls-dadd6ea104784a8dd6f671234507d639f605d304.cz3el1yeom5t.ap-south-1.rds.amazonaws.com:3306/mediconnectauth
+#    username: dbmasteruser
+#    password: mediconnect98
 #    driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
@@ -18,7 +22,7 @@ spring:
 
 
   config:
-    import: configserver:${CONFIG_SERVER_URL:http://3.108.41.230:9296}
+    import: configserver:${CONFIG_SERVER_URL:http://localhost:9296}
   profiles:
     active: test
 
